--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/ui": "^4.6",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.20",
-        "stripe/stripe-php": "*"
+        "stripe/stripe-php": "^17.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
